--- a/notebook/index.html
+++ b/notebook/index.html
@@ -7,9 +7,11 @@
     <title>Notizblock</title>
 
     <script src="./script.js"></script>
+    <script src="./scripts/templates.js"></script>
 
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./assets/styles/standard.css">
+    <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/standard.css">
 </head>
 
 <body onload="getFromLocalStorage()">
